unpackaged/main/default/objects/Email_Domain__mdt/Email_Domain__mdt.object-meta.xml
<CustomObject>
    <description>Email domains used to mark domains as Generic</description>
    <label>Email Domain</label>
    <pluralLabel>Email Domains</pluralLabel>
</CustomObject>