unpackaged/main/default/objects/Email_Domain__mdt/fields/Email_Domains__c.field-meta.xml
<CustomField>
    <fullName>Email_Domains__c</fullName>
    <description>This is the Email Domain returned and used by apex logic for processing.</description>
    <label>Email Domains</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>