unpackaged/main/default/objects/Email_Domain__mdt/fields/Generic_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Generic_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to Mark the Domain as Generic</description>
    <label>Generic_FLAG</label>
    <type>Checkbox</type>
</CustomField>