unpackaged/main/default/objects/Email_Domain__mdt/fields/Quarantined_Domains__c.field-meta.xml
<CustomField>
    <fullName>Quarantined_Domains__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quarantined Domain Flag so Domains in this group go are not processed.</description>
    <label>Quarantined Domains</label>
    <type>Checkbox</type>
</CustomField>