unpackaged/main/default/objects/Email_Domain__mdt/listViews/All_all_fields.listView-meta.xml
<ListView>
    <fullName>All_all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Email_Domains__c</columns>
    <columns>Generic_FLAG__c</columns>
    <columns>Quarantined_Domains__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (all fields)</label>
</ListView>